--- a/pages/home.html
+++ b/pages/home.html
@@ -24,7 +24,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Project</a></li>
+                    <li><a href="#">Projects</a></li>
                     <li><a href="#">Help</a></li>
                 </ul>
             </nav>
